# bioreport-worker

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/plans/: 04-anonymization.md  task-01-core-architecture.md  task-02-load-file.md  task-03-pdf-extraction.md  task-04-anonymization.md  task-05-artifacts.md  task-06-normalization.md  task-07-persistence-deployment.md  velvet-frolicking-garden.md
.cursor/plans/: steps-isolation.md
app/: main.py
app/anonymization/: anonymizer.py  base.py  de_anonymizer.py  exceptions.py  factory.py  models.py
app/config/: settings.py
app/database/: connection.py  models.py
app/logging/: logger.py
app/normalization/: __init__.py  base.py  client_base.py  example_client_adapter.py  exceptions.py  factory.py  models.py  normalizer.py  openai_client_adapter.py  prompt_loader.py  validator.py
app/pdf/: base.py  exceptions.py  factory.py  pdfplumber_adapter.py  pymupdf_adapter.py
app/processor/: artifacts_extractor.py  exceptions.py  file_loader.py  models.py  pipeline.py  processor.py  steps.py
app/worker/: job_runner.py  worker.py
docker/worker/: Dockerfile.dev  Dockerfile.prod
tests/: conftest.py
tests/integration/: README.md  conftest.py  schema.sql  test_file_loader.py  test_job_repository.py  test_job_runner_integration.py  test_normalization.py  test_processor_integration.py  test_uploaded_documents_repository.py  test_worker_integration.py
tests/unit/: test_anonymization_models.py  test_anonymizer.py  test_anonymizer_factory.py  test_file_loader.py  (+17 more)
(+4 files in other folders)
