[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bioreport-worker"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "psycopg[pool]>=3.2",
    "pydantic-settings>=2.7",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.8",
    "openai>=1.58",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-psycopg2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
